--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -237,4 +237,4 @@
     <script src="/javascript/index.js" ></script>
     <script src="/javascript/logout.js"></script>
     <script src="/javascript/review-page.js"></script>
-    <script src="/"></script>
+    <script src="/javascript/spinner.js"></script>
