--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -730,6 +730,10 @@ form label {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-image:url(/images/loader.gif);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .spinner {
@@ -746,26 +750,8 @@ form label {
   border-radius: 50%;
 }
 
-.spinner:before {
-  width: 100%;
-  height: 100%;
-  background-image:url(/images/giphy.gif);
-  animation: spin .5s infinite linear;
-}
-.spinner:after {
-  width: 90%;
-  height: 90%;
-  background-color: #151515;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
 
-@keyframes spin {
-  to {
-      transform: rotate(360deg);
-  }
-}
+
 
 /*media quary*/
 
